# data-engineering-projects

cloudops-insight-lake/: .gitignore  README.md  pyproject.toml  requirements.txt
cloudops-insight-lake/docs/: project_evidence_map.md
cloudops-insight-lake/docs/adr/: ADR-001-cloudops-use-case.md  ADR-002-lambda-first-scope.md
