[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"


[project]
name = "cloudops-insight-lake"
version = "0.1.0"
description = "Serverless Cloud Cost and Operational Efficiency Data Platform on AWS"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "George" }
]

keywords = [
    "aws",
    "data-engineering",
    "data-lake",
    "cloudops",
    "finops",
    "athena",
    "glue",
    "lambda",
    "parquet",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "pandas==2.2.3",
    "pyarrow==20.0.0",
    "PyYAML==6.0.3",
]


[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
]


[tool.setuptools.packages.find]
where = ["src"]


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-ra"
